--- a/Code.ipynb
+++ b/Code.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "Code.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -366,7 +366,7 @@
         "  plt.grid(False)\n",
         "  plt.show()\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
         "id": "pjRL5ZQhPkiX"
       },
       "source": [
-        "STATISTICS"
+        "DATASET ANALYSIS"
       ]
     },
     {
@@ -387,10 +387,12 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "#IF YOU WANT A GRAPH, ACTIVATE \"PLOT\" VARIABLE\n",
         "\n",
         "#LOAD E PREPROCESSIONG DATASET\n",
-        "small=1\n",
-        "lenght=4000\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=4000     #the lenght of small dataset\n",
+        "\n",
         "dataset=getDataset(small,lenght, 1)\n",
         "\n",
         "numeric_attributes=[\"age\",\"campaign\",\"pdays\",\"previous\",\"emp.var.rate\",\"cons.price.idx\",\"cons.conf.idx\",\"euribor3m\",\"nr.employed\"]\n",
@@ -499,11 +501,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XJxT-vmWjkeD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1f30e001-443c-4987-80d5-058fda77cb34"
+        "id": "XJxT-vmWjkeD"
       },
       "source": [
         "import numpy as np\n",
@@ -526,9 +524,9 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1\n",
-        "lenght=500\n",
-        "smote=1\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=1000     #the lenght of small dataset\n",
+        "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
         " \n",
         "#ENCODING\n",
@@ -609,18 +607,7 @@
         "plot_learning_curve_model(X, y, clf,smote)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\rDelete missing values: 0%\rDelete missing values: 0%\rDelete missing values: 0%\rDelete missing values: 0%\rDelete missing values: 0%\rDelete missing values: 1%\rDelete missing values: 1%\rDelete missing values: 1%\rDelete missing values: 1%\rDelete missing values: 1%\rDelete missing values: 2%\rDelete missing values: 2%\rDelete missing values: 2%\rDelete missing values: 2%\rDelete missing values: 2%\rDelete missing values: 3%\rDelete missing values: 3%\rDelete missing values: 3%\rDelete missing values: 3%\rDelete missing values: 3%\rDelete missing values: 4%\rDelete missing values: 4%\rDelete missing values: 4%\rDelete missing values: 4%\rDelete missing values: 4%\rDelete missing values: 5%\rDelete missing values: 5%\rDelete missing values: 5%\rDelete missing values: 5%\rDelete missing values: 5%\rDelete missing values: 6%\rDelete missing values: 6%\rDelete missing values: 6%\rDelete missing values: 6%\rDelete missing values: 6%\rDelete missing values: 7%\rDelete missing values: 7%\rDelete missing values: 7%\rDelete missing values: 7%\rDelete missing values: 7%\rDelete missing values: 8%\rDelete missing values: 8%\rDelete missing values: 8%\rDelete missing values: 8%\rDelete missing values: 8%\rDelete missing values: 9%\rDelete missing values: 9%\rDelete missing values: 9%\rDelete missing values: 9%\rDelete missing values: 9%\rDelete missing values: 10%\rDelete missing values: 10%\rDelete missing values: 10%\rDelete missing values: 10%\rDelete missing values: 10%\rDelete missing values: 11%\rDelete missing values: 11%\rDelete missing values: 11%\rDelete missing values: 11%\rDelete missing values: 11%\rDelete missing values: 12%\rDelete missing values: 12%\rDelete missing values: 12%\rDelete missing values: 12%\rDelete missing values: 12%\rDelete missing values: 13%\rDelete missing values: 13%\rDelete missing values: 13%\rDelete missing values: 13%\rDelete missing values: 13%\rDelete missing values: 14%\rDelete missing values: 14%\rDelete missing values: 14%\rDelete missing values: 14%\rDelete missing values: 14%\rDelete missing values: 15%\rDelete missing values: 15%\rDelete missing values: 15%\rDelete missing values: 15%\rDelete missing values: 15%\rDelete missing values: 16%\rDelete missing values: 16%\rDelete missing values: 16%\rDelete missing values: 16%\rDelete missing values: 16%\rDelete missing values: 17%\rDelete missing values: 17%\rDelete missing values: 17%\rDelete missing values: 17%\rDelete missing values: 17%\rDelete missing values: 18%\rDelete missing values: 18%\rDelete missing values: 18%\rDelete missing values: 18%\rDelete missing values: 18%\rDelete missing values: 19%\rDelete missing values: 19%\rDelete missing values: 19%\rDelete missing values: 19%\rDelete missing values: 19%\rDelete missing values: 20%\rDelete missing values: 20%\rDelete missing values: 20%\rDelete missing values: 20%\rDelete missing values: 20%\rDelete missing values: 21%\rDelete missing values: 21%\rDelete missing values: 21%\rDelete missing values: 21%\rDelete missing values: 21%\rDelete missing values: 22%\rDelete missing values: 22%\rDelete missing values: 22%\rDelete missing values: 22%\rDelete missing values: 22%\rDelete missing values: 23%\rDelete missing values: 23%\rDelete missing values: 23%\rDelete missing values: 23%\rDelete missing values: 23%\rDelete missing values: 24%\rDelete missing values: 24%\rDelete missing values: 24%\rDelete missing values: 24%\rDelete missing values: 24%\rDelete missing values: 25%\rDelete missing values: 25%\rDelete missing values: 25%\rDelete missing values: 25%\rDelete missing values: 25%\rDelete missing values: 26%\rDelete missing values: 26%\rDelete missing values: 26%\rDelete missing values: 26%\rDelete missing values: 26%\rDelete missing values: 27%\rDelete missing values: 27%\rDelete missing values: 27%\rDelete missing values: 27%\rDelete missing values: 27%\rDelete missing values: 28%\rDelete missing values: 28%\rDelete missing values: 28%\rDelete missing values: 28%\rDelete missing values: 28%\rDelete missing values: 29%\rDelete missing values: 29%\rDelete missing values: 29%\rDelete missing values: 29%\rDelete missing values: 29%\rDelete missing values: 30%\rDelete missing values: 30%\rDelete missing values: 30%\rDelete missing values: 30%\rDelete missing values: 30%\rDelete missing values: 31%\rDelete missing values: 31%\rDelete missing values: 31%\rDelete missing values: 31%\rDelete missing values: 31%\rDelete missing values: 32%\rDelete missing values: 32%\rDelete missing values: 32%\rDelete missing values: 32%\rDelete missing values: 32%\rDelete missing values: 33%\rDelete missing values: 33%\rDelete missing values: 33%\rDelete missing values: 33%\rDelete missing values: 33%\rDelete missing values: 34%\rDelete missing values: 34%\rDelete missing values: 34%\rDelete missing values: 34%\rDelete missing values: 34%\rDelete missing values: 35%\rDelete missing values: 35%\rDelete missing values: 35%\rDelete missing values: 35%\rDelete missing values: 35%\rDelete missing values: 36%\rDelete missing values: 36%\rDelete missing values: 36%\rDelete missing values: 36%\rDelete missing values: 36%\rDelete missing values: 37%\rDelete missing values: 37%\rDelete missing values: 37%\rDelete missing values: 37%\rDelete missing values: 37%\rDelete missing values: 38%\rDelete missing values: 38%\rDelete missing values: 38%\rDelete missing values: 38%\rDelete missing values: 38%\rDelete missing values: 39%\rDelete missing values: 39%\rDelete missing values: 39%\rDelete missing values: 39%\rDelete missing values: 39%\rDelete missing values: 40%\rDelete missing values: 40%\rDelete missing values: 40%\rDelete missing values: 40%\rDelete missing values: 40%\rDelete missing values: 41%\rDelete missing values: 41%\rDelete missing values: 41%\rDelete missing values: 41%\rDelete missing values: 41%\rDelete missing values: 42%\rDelete missing values: 42%\rDelete missing values: 42%\rDelete missing values: 42%\rDelete missing values: 42%\rDelete missing values: 43%\rDelete missing values: 43%\rDelete missing values: 43%\rDelete missing values: 43%\rDelete missing values: 43%\rDelete missing values: 44%\rDelete missing values: 44%\rDelete missing values: 44%\rDelete missing values: 44%\rDelete missing values: 44%\rDelete missing values: 45%\rDelete missing values: 45%\rDelete missing values: 45%\rDelete missing values: 45%\rDelete missing values: 45%\rDelete missing values: 46%\rDelete missing values: 46%\rDelete missing values: 46%\rDelete missing values: 46%\rDelete missing values: 46%\rDelete missing values: 47%\rDelete missing values: 47%\rDelete missing values: 47%\rDelete missing values: 47%\rDelete missing values: 47%\rDelete missing values: 48%\rDelete missing values: 48%\rDelete missing values: 48%\rDelete missing values: 48%\rDelete missing values: 48%\rDelete missing values: 49%\rDelete missing values: 49%\rDelete missing values: 49%\rDelete missing values: 49%\rDelete missing values: 49%\rDelete missing values: 50%\rDelete missing values: 50%\rDelete missing values: 50%\rDelete missing values: 50%\rDelete missing values: 50%\rDelete missing values: 51%\rDelete missing values: 51%\rDelete missing values: 51%\rDelete missing values: 51%\rDelete missing values: 51%\rDelete missing values: 52%\rDelete missing values: 52%\rDelete missing values: 52%\rDelete missing values: 52%\rDelete missing values: 52%\rDelete missing values: 53%\rDelete missing values: 53%\rDelete missing values: 53%\rDelete missing values: 53%\rDelete missing values: 53%\rDelete missing values: 54%\rDelete missing values: 54%\rDelete missing values: 54%\rDelete missing values: 54%\rDelete missing values: 54%\rDelete missing values: 55%\rDelete missing values: 55%\rDelete missing values: 55%\rDelete missing values: 55%\rDelete missing values: 55%\rDelete missing values: 56%\rDelete missing values: 56%\rDelete missing values: 56%\rDelete missing values: 56%\rDelete missing values: 56%\rDelete missing values: 57%\rDelete missing values: 57%\rDelete missing values: 57%\rDelete missing values: 57%\rDelete missing values: 57%\rDelete missing values: 58%\rDelete missing values: 58%\rDelete missing values: 58%\rDelete missing values: 58%\rDelete missing values: 58%\rDelete missing values: 59%\rDelete missing values: 59%\rDelete missing values: 59%\rDelete missing values: 59%\rDelete missing values: 59%\rDelete missing values: 60%\rDelete missing values: 60%\rDelete missing values: 60%\rDelete missing values: 60%\rDelete missing values: 60%\rDelete missing values: 61%\rDelete missing values: 61%\rDelete missing values: 61%\rDelete missing values: 61%\rDelete missing values: 61%\rDelete missing values: 62%\rDelete missing values: 62%\rDelete missing values: 62%\rDelete missing values: 62%\rDelete missing values: 62%\rDelete missing values: 63%\rDelete missing values: 63%\rDelete missing values: 63%\rDelete missing values: 63%\rDelete missing values: 63%\rDelete missing values: 64%\rDelete missing values: 64%\rDelete missing values: 64%\rDelete missing values: 64%\rDelete missing values: 64%\rDelete missing values: 65%\rDelete missing values: 65%\rDelete missing values: 65%\rDelete missing values: 65%\rDelete missing values: 65%\rDelete missing values: 66%\rDelete missing values: 66%\rDelete missing values: 66%\rDelete missing values: 66%\rDelete missing values: 66%\rDelete missing values: 67%\rDelete missing values: 67%\rDelete missing values: 67%\rDelete missing values: 67%\rDelete missing values: 67%\rDelete missing values: 68%\rDelete missing values: 68%\rDelete missing values: 68%\rDelete missing values: 68%\rDelete missing values: 68%\rDelete missing values: 69%\rDelete missing values: 69%\rDelete missing values: 69%\rDelete missing values: 69%\rDelete missing values: 69%\rDelete missing values: 70%\rDelete missing values: 70%\rDelete missing values: 70%\rDelete missing values: 70%\rDelete missing values: 70%\rDelete missing values: 71%\rDelete missing values: 71%\rDelete missing values: 71%\rDelete missing values: 71%\rDelete missing values: 71%\rDelete missing values: 72%\rDelete missing values: 72%\rDelete missing values: 72%\rDelete missing values: 72%\rDelete missing values: 72%\rDelete missing values: 73%\rDelete missing values: 73%\rDelete missing values: 73%\rDelete missing values: 73%\rDelete missing values: 73%\rDelete missing values: 74%\rDelete missing values: 74%\rDelete missing values: 74%\rDelete missing values: 74%\rDelete missing values: 74%\rDelete missing values: 75%\rDelete missing values: 75%\rDelete missing values: 75%\rDelete missing values: 75%\rDelete missing values: 75%\rDelete missing values: 76%\rDelete missing values: 76%\rDelete missing values: 76%\rDelete missing values: 76%\rDelete missing values: 76%\rDelete missing values: 77%\rDelete missing values: 77%\rDelete missing values: 77%\rDelete missing values: 77%\rDelete missing values: 77%\rDelete missing values: 78%\rDelete missing values: 78%\rDelete missing values: 78%\rDelete missing values: 78%\rDelete missing values: 78%\rDelete missing values: 79%\rDelete missing values: 79%\rDelete missing values: 79%\rDelete missing values: 79%\rDelete missing values: 79%\rDelete missing values: 80%\rDelete missing values: 80%\rDelete missing values: 80%\rDelete missing values: 80%\rDelete missing values: 80%\rDelete missing values: 81%\rDelete missing values: 81%\rDelete missing values: 81%\rDelete missing values: 81%\rDelete missing values: 81%\rDelete missing values: 82%\rDelete missing values: 82%\rDelete missing values: 82%\rDelete missing values: 82%\rDelete missing values: 82%\rDelete missing values: 83%\rDelete missing values: 83%\rDelete missing values: 83%\rDelete missing values: 83%\rDelete missing values: 83%\rDelete missing values: 84%\rDelete missing values: 84%\rDelete missing values: 84%\rDelete missing values: 84%\rDelete missing values: 84%\rDelete missing values: 85%\rDelete missing values: 85%\rDelete missing values: 85%\rDelete missing values: 85%\rDelete missing values: 85%\rDelete missing values: 86%\rDelete missing values: 86%\rDelete missing values: 86%\rDelete missing values: 86%\rDelete missing values: 86%\rDelete missing values: 87%\rDelete missing values: 87%\rDelete missing values: 87%\rDelete missing values: 87%\rDelete missing values: 87%\rDelete missing values: 88%\rDelete missing values: 88%\rDelete missing values: 88%\rDelete missing values: 88%\rDelete missing values: 88%\rDelete missing values: 89%\rDelete missing values: 89%\rDelete missing values: 89%\rDelete missing values: 89%\rDelete missing values: 89%\rDelete missing values: 90%\rDelete missing values: 90%\rDelete missing values: 90%\rDelete missing values: 90%\rDelete missing values: 90%\rDelete missing values: 91%\rDelete missing values: 91%\rDelete missing values: 91%\rDelete missing values: 91%\rDelete missing values: 91%\rDelete missing values: 92%\rDelete missing values: 92%\rDelete missing values: 92%\rDelete missing values: 92%\rDelete missing values: 92%\rDelete missing values: 93%\rDelete missing values: 93%\rDelete missing values: 93%\rDelete missing values: 93%\rDelete missing values: 93%\rDelete missing values: 94%\rDelete missing values: 94%\rDelete missing values: 94%\rDelete missing values: 94%\rDelete missing values: 94%\rDelete missing values: 95%\rDelete missing values: 95%\rDelete missing values: 95%\rDelete missing values: 95%\rDelete missing values: 95%\rDelete missing values: 96%\rDelete missing values: 96%\rDelete missing values: 96%\rDelete missing values: 96%\rDelete missing values: 96%\rDelete missing values: 97%\rDelete missing values: 97%\rDelete missing values: 97%\rDelete missing values: 97%\rDelete missing values: 97%\rDelete missing values: 98%\rDelete missing values: 98%\rDelete missing values: 98%\rDelete missing values: 98%\rDelete missing values: 98%\rDelete missing values: 99%\rDelete missing values: 99%\rDelete missing values: 99%\rDelete missing values: 99%\rDelete missing values: 99%\r                                             \r\n",
-            "Dataset size 472\n",
-            "\n",
-            "Tuning: 51.67%      best C = 0.01      best P = l2      best accuracy = 0.77"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -657,9 +644,9 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1\n",
-        "lenght=1000\n",
-        "smote=1\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=1000     #the lenght of small dataset\n",
+        "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
         " \n",
         "#ENCODING\n",
@@ -782,9 +769,9 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1\n",
-        "lenght=2000\n",
-        "smote=1\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=1000     #the lenght of small dataset\n",
+        "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
         " \n",
         "#ENCODING\n",
@@ -908,9 +895,9 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1\n",
-        "lenght=2000\n",
-        "smote=1\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=1000     #the lenght of small dataset\n",
+        "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
         " \n",
         "#ENCODING\n",
@@ -1059,9 +1046,9 @@
         "  from sklearn.svm import SVC\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1\n",
-        "lenght=2000\n",
-        "smote=1\n",
+        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "lenght=1000     #the lenght of small dataset\n",
+        "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
         " \n",
         "#ENCODING\n",
