--- a/Code.ipynb
+++ b/Code.ipynb
@@ -387,9 +387,9 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "#IF YOU WANT A GRAPH, ACTIVATE \"PLOT\" VARIABLE\n",
+        "#IF YOU WANT A GRAPH, ACTIVATE \"plot\" VARIABLE\n",
         "\n",
-        "#LOAD E PREPROCESSIONG DATASET\n",
+        "#LOAD DATASET\n",
         "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
         "lenght=4000     #the lenght of small dataset\n",
         "\n",
@@ -433,7 +433,7 @@
         "  drawStatisticsTable(data, list(df.columns), list(getStatistic(df,\"age\").keys()))\n",
         "\n",
         "\n",
-        "#BOXPLOT  (numeric variables, change \"att\")\n",
+        "#BOXPLOT and DENSITY  (numeric variables, change \"att\")\n",
         "plot=0\n",
         "numeric_attributes=[\"age\",\"campaign\",\"pdays\",\"previous\",\"emp.var.rate\",\"cons.price.idx\",\"cons.conf.idx\",\"euribor3m\",\"nr.employed\"]\n",
         "att=numeric_attributes[0]\n",
@@ -455,6 +455,7 @@
         "    ax.legend_.set_bbox_to_anchor((0.05, 0.95))\n",
         "    ax.legend_._set_loc(2)\n",
         "    plt.show()\n",
+        "\n",
         "\n",
         "#BAR CHARTS    (categorical variables, change \"att\")\n",
         "plot=0\n",
