--- a/Code.ipynb
+++ b/Code.ipynb
@@ -525,7 +525,7 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want to use the small dataset for a faster analysis\n",
         "lenght=1000     #the lenght of small dataset\n",
         "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
@@ -645,7 +645,7 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want to use the small dataset for a faster analysis\n",
         "lenght=1000     #the lenght of small dataset\n",
         "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
@@ -770,7 +770,7 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want to use the small dataset for a faster analysis\n",
         "lenght=1000     #the lenght of small dataset\n",
         "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
@@ -896,7 +896,7 @@
         "\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want to use the small dataset for a faster analysis\n",
         "lenght=1000     #the lenght of small dataset\n",
         "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
@@ -1047,7 +1047,7 @@
         "  from sklearn.svm import SVC\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want to use the small dataset for a faster analysis\n",
         "lenght=1000     #the lenght of small dataset\n",
         "smote=1            #set to 1 if you want SMOTE\n",
         "dataset=getDataset(small,lenght)\n",
