--- a/Code.ipynb
+++ b/Code.ipynb
@@ -390,7 +390,7 @@
         "#IF YOU WANT A GRAPH, ACTIVATE \"plot\" VARIABLE\n",
         "\n",
         "#LOAD DATASET\n",
-        "small=1      #set to 1 if you want the small dataset for a fasetr analysis\n",
+        "small=1      #set to 1 if you want the small dataset for a faster analysis\n",
         "lenght=4000     #the lenght of small dataset\n",
         "\n",
         "dataset=getDataset(small,lenght, 1)\n",
